--- a/package.json
+++ b/package.json
@@ -28,6 +28,5 @@
     "parcel-reporter-clean-dist": "^1.0.4",
     "posthtml-include": "^1.7.4"
   },
-  "browserslist": "> 0.5%, last 2 versions, not dead",
-  "_comment": "comment text goes here..."
-}
+  "browserslist": "> 0.5%, last 2 versions, not dead"
+ }
